--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
-ultralytics
-opencv-python-headless
-Pillow
+ultralytics==8.3.70
+streamlit==1.42.0
+opencv-python-headless==4.11.0.86
+Pillow==11.1.0
